# parsub

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: api_reference.md  development_guide.md  user_guide.md
examples/: sample.tex
src/parsub/analyzer/: expression_analyzer.py
src/parsub/api/: main.py
src/parsub/cli/: main.py
src/parsub/generator/: code_generator.py
src/parsub/parser/: latex_parser.py
tests/: test_analyzer.py  test_generator.py  test_parser.py
